# self-sovereign-identity-SSI

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
env/: .env  .env.backup
services/api/: Dockerfile  pyproject.toml
services/api/app/: crypto.py  did.py  main.py  models.py  oidc_like.py  settings.py  statuslist.py  storage.py  telemetry.py  utils.py
services/api/tests/: test_lifecycle.py
services/demo-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/demo-ui/src/: App.tsx
services/demo-ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  switch.tsx  tabs.tsx  textarea.tsx
services/issuer-ui/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
services/issuer-ui/src/: App.tsx  index.css  main.tsx
services/ui-kit/: package.json
services/ui-kit/src/: index.ts
services/ui-kit/src/components/qr/: QrScanner.tsx
services/ui-kit/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  switch.tsx  tabs.tsx  textarea.tsx
services/verifier-ui/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
services/verifier-ui/src/: App.tsx
services/wallet-ui/: Dockerfile  index.html  package.json  vite.config.ts
services/wallet-ui/src/: App.tsx
